fixed resto gallery spacing

--- a/src/pages/RestaurantPage/styles/swiper-resto-gallery.css
+++ b/src/pages/RestaurantPage/styles/swiper-resto-gallery.css
@@ -3,15 +3,15 @@
 }
 
 .swiper {
-  width: 90%;
+  width: 100%;
   height: 100%;
   margin: 0.5rem 0.5rem;
 }
 
 .swiper-slide {
-  height: 85%;
+  height: 100%;
   width: 100%;
+  margin-top: 0.2rem;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
